--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Out Space</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/83b6b827e0.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-
     <!-- Make Menu -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
@@ -27,6 +27,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Service</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">About Me</a>
@@ -44,35 +47,99 @@
 
     <!-- Make slider -->
     <section id="slider">
-        <div class="carousel slide" dat-bs-ride="carousel">
+        <div class="carousel slide" dat-bs-ride="carousel" id="mySlider">
+            <ol class="carousel-indicators">
+                <button data-bs-target="#mySlider" data-bs-slide-to="0" class="active"></button>
+                <button data-bs-target="#mySlider" data-bs-slide-to="1"></button>
+                <button data-bs-target="#mySlider" data-bs-slide-to="2"></button>
+            </ol>
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image-1 active">
                     <div class="container">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption d-none d-sm-block">
                             <h1 class="display-3">Earth</h1>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut praesentium quasi alias
-                                iusto enim ipsa?</p>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                                praesentium quasi alias iusto enim ipsa?
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item carousel-image-2 ">
+                <div class="carousel-item carousel-image-2">
                     <div class="container">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption d-none d-sm-block">
                             <h1 class="display-3">Space</h1>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut praesentium quasi alias
-                                iusto enim ipsa?</p>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                                praesentium quasi alias iusto enim ipsa?
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item carousel-image-3 ">
+                <div class="carousel-item carousel-image-3">
                     <div class="container">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption d-none d-sm-block">
                             <h1 class="display-3">Mountain</h1>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut praesentium quasi alias
-                                iusto enim ipsa?</p>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut
+                                praesentium quasi alias iusto enim ipsa?
+                            </p>
                         </div>
                     </div>
                 </div>
+                <button class="carousel-control-prev" data-bs-target="#mySlider" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" data-bs-target="#mySlider" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Service Section -->
+    <section id="section" class="py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fa-solid fa-rocket fa-3x mb-2"></i>
+                    <h3>Space Ship</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                        sed?
+                    </p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fa-solid fa-atom fa-3x mb-2"></i>
+                    <h3>Alain</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                        sed?
+                    </p>
+                </div>
+                <div class="col-md-4 text-center mb-4">
+                    <i class="fa-solid fa-meteor fa-3x mb-2"></i>
+                    <h3>Planet</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                        sed?
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="p-5">
+        <div class="dark-overlay">
+            <div class="row">
+                <dic class="col">
+                    <div class="container pt-5">
+                        <h1>About Me</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti non ratione provident. Ut
+                            nobis voluptates odit illo mollitia eveniet error.</p>
+                    </div>
+                </dic>
             </div>
         </div>
     </section>
